2005-10-10 Anatoly Sokolov <aesok@pautinka.net>

	(Idea by Dmitry K. <dmixm at marine dot febras dot ru>)
	* common/macros.inc (X_movw) : New version. Can use register names 
	as arguments.

2005-10-06 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/boot.h (__boot_page_fill_normal, 
	__boot_page_fill_alternate, __boot_page_erase_normal, 
	__boot_page_erase_alternate,  __boot_page_write_normal,
	__boot_page_write_alternate, __boot_rww_enable, 
	__boot_rww_enable_alternate, __boot_lock_bits_set,
	__boot_lock_bits_set_alternate, boot_lock_fuse_bits_get): Change type
	of __SPM_REG operand on input, immediate.	
	(__boot_page_fill_extended, __boot_page_erase_extended, 
	__boot_page_write_extended) : Change type of __SPM_REG and RAMPZ 
	operands on input, immediate.
	[Fixed bug #14486]
	
2005-09-29 Anatoly Sokolov <aesok@pautinka.net>
	
	Add support for AT90PWM2B/AT90PWM3B.
	* include/avr/io90pwmx.h (PCST0, PCST1, PCST2) : Add.

2005-09-29 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/boot.h (__boot_eeprom_spm_safe): Deleted.
	( boot_page_fill_safe, boot_page_erase_safe, boot_page_write_safe,
	boot_rww_enable_safe, boot_lock_bits_set_safe): Changed,
	do not use __boot_eeprom_spm_safe macro.
	[Fixed bug #12324]

2005-09-26 Anatoly Sokolov <aesok@pautinka.net>

	(Contributed by Dmitry K. <dmixm at marine dot febras dot ru>)
	libc/pmstring/strnlen_P.S (strnlen_P): Move LPM_R0_ZP instruction.
	[Fixed bug #14503]

2005-09-25 Anatoly Sokolov <aesok@pautinka.net>

	* configure.ac: Use automake conditionals for enabling/disabling
	device support.
	* devtools/gen-avr-lib-tree.sh: (Ditto.)
	* AvrCommon.am : Delete VPATH.
	* AvrCommonLibC.am: (Ditto.)
	[ Fixed bug #14380 ]

2005-09-23 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/iomxx0_1.h (PCIFR): Change address from 0x1C to 0x1B

2005-09-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h (struct __file): Add the __SMALLOC flag bit.
	(fdev_close): add this macro as a hook to destroy library resources